--- a/view/issued_check_tree.xml
+++ b/view/issued_check_tree.xml
@@ -3,6 +3,8 @@
 The COPYRIGHT file at the top level of this repository contains
 the full copyright notices and license terms. -->
 <tree string="Issued Checks">
+    <field name="bank_account"/>
     <field name="name"/>
     <field name="amount"/>
+    <field name="date"/>
 </tree>
