--- a/view/account_issued_check_tree.xml
+++ b/view/account_issued_check_tree.xml
@@ -6,8 +6,9 @@ the full copyright notices and license terms. -->
     <field name="bank_account"/>
     <field name="name"/>
     <field name="amount"/>
-    <field name="date_out"/>
     <field name="date"/>
+    <field name="date_out"/>
+    <field name="voucher"/>
     <field name="receiving_party"/>
     <field name="debit_date"/>
     <field name="on_order"/>
