--- a/view/account_third_check_tree.xml
+++ b/view/account_third_check_tree.xml
@@ -9,6 +9,7 @@ the full copyright notices and license terms. -->
     <field name="date"/>
     <field name="bank"/>
     <field name="source_party"/>
+    <field name="not_to_order"/>
     <field name="date_out"/>
     <field name="destiny_party"/>
     <field name="account_bank_out"/>
