--- a/view/account_issued_check_form.xml
+++ b/view/account_issued_check_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of the account_check_ar module for Tryton.
 The COPYRIGHT file at the top level of this repository contains
 the full copyright notices and license terms. -->
-<form string="Issued Check">
+<form>
     <label name="bank_account"/>
     <field name="bank_account"/>
     <label name="name"/>
