--- a/view/account_issued_check_tree.xml
+++ b/view/account_issued_check_tree.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of the account_check_ar module for Tryton.
 The COPYRIGHT file at the top level of this repository contains
 the full copyright notices and license terms. -->
-<tree string="Issued Checks">
+<tree>
     <field name="bank_account"/>
     <field name="name"/>
     <field name="amount"/>
