--- a/view/third_check_deposit.xml
+++ b/view/third_check_deposit.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of the account_check_ar module for Tryton.
 The COPYRIGHT file at the top level of this repository contains
 the full copyright notices and license terms. -->
-<form string="Check Deposit">
+<form>
     <label name="bank_account"/>
     <field name="bank_account" widget="selection"/>
     <label name="date"/>
