--- a/view/third_check_held.xml
+++ b/view/third_check_held.xml
@@ -5,4 +5,6 @@ the full copyright notices and license terms. -->
 <form>
     <label name="journal"/>
     <field name="journal" widget="selection"/>
+    <label name="credit_account"/>
+    <field name="credit_account"/>
 </form>
