fix #4 Agregar campo clearing a la vista de lista Cheques de Terceros

--- a/view/account_third_check_tree.xml
+++ b/view/account_third_check_tree.xml
@@ -13,5 +13,6 @@ the full copyright notices and license terms. -->
     <field name="date_out"/>
     <field name="destiny_party"/>
     <field name="account_bank_out"/>
+    <field name="clearing"/>
     <field name="state"/>
 </tree>
