fixes #5 implemento estado reverted. Agrego boton rechazar cheque.

--- a/view/account_third_check_form.xml
+++ b/view/account_third_check_form.xml
@@ -44,4 +44,6 @@ the full copyright notices and license terms. -->
         icon="tryton-go-next"/>
     <button name="deposited" colspan="2" string="_Deposit"
         icon="tryton-go-next"/>
+    <button name="rejected" colspan="2" string="_Reject"
+        icon="tryton-go-next"/>
 </form>
