FIX #8 Se agrega el campo bool electronic.
Se requiere diferenciar los cheques electronicos.

--- a/view/account_issued_check_tree.xml
+++ b/view/account_issued_check_tree.xml
@@ -12,6 +12,7 @@ the full copyright notices and license terms. -->
     <field name="receiving_party"/>
     <field name="debit_date"/>
     <field name="on_order"/>
+    <field name="electronic"/>
     <field name="clearing"/>
     <field name="state"/>
 </tree>
