--- a/view/account_third_check_tree.xml
+++ b/view/account_third_check_tree.xml
@@ -10,6 +10,7 @@ the full copyright notices and license terms. -->
     <field name="bank"/>
     <field name="source_party"/>
     <field name="not_to_order"/>
+    <field name="electronic"/>
     <field name="date_out"/>
     <field name="destiny_party"/>
     <field name="account_bank_out"/>
