--- a/view/voucher_check_form.xml
+++ b/view/voucher_check_form.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of the account_check_ar module for Tryton.
-The COPYRIGHT file at the top level of this repository contains
-the full copyright notices and license terms. -->
 <data>
-    <xpath
-        expr="/form/notebook/page[@id=&quot;pay_lines&quot;]"
-        position="after">
+    <xpath expr="/form/notebook/page[@id='pay_lines']" position="after">
         <page string="Checks" id="checks" col="6">
             <field name="issued_check" colspan="6"
                 view_ids="account_check_ar.issued_check_view_tree"/>
