--- a/view/journal_check_form.xml
+++ b/view/journal_check_form.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0"?>
 <data>
-    <xpath
-        expr="/form/notebook/page[@id=&quot;general&quot;]"
-        position="after">
-        <page string="Checks" id="journal_checks">
+    <xpath expr="/form/field[@name='sequence']" position="after">
+        <newline/>
+        <group id="journal_checks" string="Checks" colspan="6">
             <label name="third_check_account"/>
             <field name="third_check_account"/>
             <label name="issued_check_account"/>
             <field name="issued_check_account"/>
             <label name="rejected_check_account"/>
             <field name="rejected_check_account"/>
-        </page>
+        </group>
     </xpath>
 </data>
