--- a/view/voucher_check_form.xml
+++ b/view/voucher_check_form.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='pay_lines']" position="after">
-        <page string="Checks" id="checks" col="6">
-            <field name="issued_check" colspan="6"
-                view_ids="account_check_ar.issued_check_view_tree"/>
-            <field name="third_pay_checks" colspan="6"
-                view_ids="account_check_ar.third_pay_checks_view_tree"/>
-            <field name="third_check" colspan="3"
-                view_ids="account_check_ar.third_check_view_tree"/>
-        </page>
+    <xpath expr="/form/notebook/page[@id='payments']" position="inside">
+        <field name="issued_check" colspan="4"
+            view_ids="account_check_ar.issued_check_view_tree"/>
+        <field name="third_pay_checks" colspan="4"
+            view_ids="account_check_ar.third_pay_checks_view_tree"/>
+        <field name="third_check" colspan="4"
+            view_ids="account_check_ar.third_check_view_tree"/>
     </xpath>
 </data>
