Show more fields and order by date when selecting a check in vouchers

--- a/view/third_check_tree.xml
+++ b/view/third_check_tree.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
 <tree>
     <field name="name"/>
-    <field name="bank"/>
+    <field name="date_in"/>
     <field name="date"/>
     <field name="amount"/>
+    <field name="bank"/>
+    <field name="electronic"/>
 </tree>
