--- a/view/account_third_check_form.xml
+++ b/view/account_third_check_form.xml
@@ -12,6 +12,8 @@
     <field name="date_in"/>
     <label name="date"/>
     <field name="date"/>
+    <label name="electronic"/>
+    <field name="electronic"/>
     <label name="not_to_order"/>
     <field name="not_to_order"/>
     <separator string="Origin" colspan="4" id="origin"/>
@@ -31,12 +33,12 @@
     <label name="account_bank_out"/>
     <field name="account_bank_out"/>
     <separator string="Extra Info" colspan="4" id="extra_info"/>
-    <label name="on_order"/>
-    <field name="on_order"/>
-    <label name="electronic"/>
-    <field name="electronic"/>
     <label name="signatory"/>
     <field name="signatory"/>
+    <label name="endorsed"/>
+    <field name="endorsed"/>
+    <label name="on_order"/>
+    <field name="on_order"/>
     <label name="clearing"/>
     <field name="clearing"/>
     <label name="state"/>
